# Project-Codex

./: .gitignore  Cargo.toml  README.md
crates/codex-cli/: Cargo.toml
crates/codex-cli/src/: coordination_pipeline.rs  pipeline.rs
crates/codex-cli/tests/: diff_pipeline.rs  python_validation_cli.rs
crates/codex-coord/src/: detector.rs
crates/codex-core/src/: error.rs  lib.rs  semantic.rs
crates/codex-graph/: Cargo.toml
crates/codex-graph/src/: lib.rs
crates/codex-graph/tests/: code_graph.rs
crates/codex-lsp/: Cargo.toml
crates/codex-lsp/src/: backend.rs  config.rs  lib.rs  main.rs  upstream.rs
crates/codex-lsp/tests/: lsp_backend.rs
crates/codex-parse/src/: bridge.rs  lib.rs  python.rs  typescript.rs
crates/codex-parse/tests/: python_extractor.rs  typescript_extractor.rs
crates/nex-cli/: Cargo.toml
crates/nex-cli/src/: cli.rs  coordination_pipeline.rs  eventlog_pipeline.rs  lib.rs  main.rs  output.rs  pipeline.rs  serve_pipeline.rs
crates/nex-cli/tests/: coordination_cli.rs  coordination_crdt_cli.rs  diff_pipeline.rs  eventlog_cli.rs  python_validation_cli.rs  rust_validation_cli.rs  serve_cli.rs  validation_cli.rs
crates/nex-coord/: Cargo.toml
crates/nex-coord/src/: coordinator.rs  crdt.rs  detector.rs  lib.rs  protocol.rs  service.rs
crates/nex-coord/tests/: conflict_detection.rs  coordination.rs  service.rs  service_crdt.rs
crates/nex-core/: Cargo.toml
crates/nex-core/src/: conflict.rs  coordination.rs  error.rs  lib.rs  semantic.rs  validation.rs
crates/nex-eventlog/: Cargo.toml
crates/nex-eventlog/src/: event.rs  lib.rs  store.rs
crates/nex-eventlog/tests/: eventlog.rs
crates/nex-graph/: Cargo.toml
crates/nex-graph/src/: lib.rs
crates/nex-graph/tests/: code_graph.rs
crates/nex-lsp/: Cargo.toml
crates/nex-lsp/src/: backend.rs  config.rs  lib.rs  main.rs  protocol.rs  upstream.rs
crates/nex-lsp/tests/: lsp_backend.rs
crates/nex-parse/: Cargo.toml
crates/nex-parse/src/: lib.rs  python.rs  rust.rs  typescript.rs
crates/nex-parse/tests/: python_extractor.rs  rust_extractor.rs  typescript_extractor.rs
crates/nex-validate/: Cargo.toml
crates/nex-validate/src/: lib.rs  validator.rs
crates/nex-validate/tests/: validation.rs
prompts/: 001-codex-parse-typescript-extractor.md  001-nex-parse-typescript-extractor.md  002-codex-graph-implementation.md  002-nex-graph-implementation.md  003-nex-cli-diff-pipeline.md  004-nex-coord-conflict-detection.md  005-nex-coord-coordination-engine.md  006-nex-cli-coordination-pipeline.md  007-nex-validate-validation-engine.md
tools/: spec_query.py  test_repo_tools.py  tool_selftest.py  verify_slice.py  workspace_doctor.py
