[workspace]
members = [
    "crates/nex-core",
    "crates/nex-parse",
    "crates/nex-graph",
    "crates/nex-coord",
    "crates/nex-validate",
    "crates/nex-eventlog",
    "crates/nex-lsp",
    "crates/nex-cli",
]
default-members = ["crates/nex-cli"]
resolver = "2"

[workspace.dependencies]
# Parsing & CST
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.23"
rowan = "0.16"

# Graph
petgraph = "0.8"

# CRDT
loro = "1"

# Networking & Event Streaming
async-nats = { version = "0.46", features = ["jetstream"] }
tower-lsp = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Git
git2 = "0.20"

# Hashing
blake3 = "1"

# Error Handling
thiserror = "2"

# Logging
tracing = "0.1"

# Internal crates
nex-core = { path = "crates/nex-core" }
nex-parse = { path = "crates/nex-parse" }
nex-graph = { path = "crates/nex-graph" }
nex-coord = { path = "crates/nex-coord" }
nex-validate = { path = "crates/nex-validate" }
nex-eventlog = { path = "crates/nex-eventlog" }
