[package]
name = "nex-cli"
version = "0.1.0"
edition = "2024"
publish = false
description = "CLI binary for Nexum Graph (nex diff, nex check, nex serve)"

[lib]
name = "nex_cli"
path = "src/lib.rs"

[[bin]]
name = "nex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
chrono = { workspace = true }
nex-core = { workspace = true }
nex-parse = { workspace = true }
nex-graph = { workspace = true }
nex-coord = { workspace = true }
nex-validate = { workspace = true }
nex-eventlog = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.24"
