[package]
name = "nex-coord"
version = "0.1.0"
edition = "2024"
publish = false
description = "Intent declaration, semantic locking, coordination protocol"

[dependencies]
nex-core = { workspace = true }
nex-parse = { workspace = true }
nex-graph = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
loro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
