[package]
name = "nex-eventlog"
version = "0.1.0"
edition = "2024"
publish = false
description = "Event sourcing, semantic rollback, NATS JetStream integration"

[dependencies]
nex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }

[dev-dependencies]
