[package]
name = "nex-graph"
version = "0.1.0"
edition = "2024"
publish = false
description = "petgraph-based semantic code graph with diff capability"

[dependencies]
nex-core = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
