[package]
name = "nex-parse"
version = "0.1.0"
edition = "2024"
publish = false
description = "Tree-sitter parsing, rowan CST bridge, semantic unit extraction"

[dependencies]
nex-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
rowan = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
